# TEYMUR_RZALI_TTT

./: CMakeLists.txt  README.md  main.c
game/: CMakeLists.txt  game.c  game.h
